Compil-03-18-01:54/Compilation_java.log
CalculetteParser.java:1348: error: not a statement
				            String false = newLabel();
				            ^
CalculetteParser.java:1348: error: ';' expected
				            String false = newLabel();
				                  ^
2 errors
